untreated_notes/exam/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awesome-ingress
spec:
  rules:
  - host: ingress-test.s042586.edu.slurm.io
    http:
      paths:
      - path: /1
        pathType: Prefix
        backend:
          service:
            name: ingress-test-1
            port:
              number: 80
  - host: ingress-test.s042586.edu.slurm.io
    http:
      paths:
      - path: /2
        pathType: Prefix
        backend:
          service:
            name: ingress-test-2
            port:
              number: 80
